--- a/index.html
+++ b/index.html
@@ -1,43 +1,55 @@
+
 <!DOCTYPE html>
 <html>
-  <head>
-     <title>
-       A New Website
-      </title>
-      <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
-    <section>
-      <div>
-        <ul>
-          <li>
-            <a href="index.html">
-              Home
-            </a>
-          </li>
-          <li>
-            <a href="content.html">
-              Content
-            </a>
-          </li>
-          <li>
-            <a href="contact.html">
-              Contact
-            </a>
-          </li>
-        </ul>
-      </div>
-      <div>
-        <h1>
-          Website Title
-        </h1>
-        <h5>
-          This is a subtitle.
-        </h5>
-      </div>
-      <div>
-        
-      </div>
-    </section>
-  </body>
+	<head>
+		<title>cyancat // 0ffcat</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	</head>
+
+	<body>
+      <p>
+        Hi, there's not much here for the moment, but there will be! ...eventually. 
+      </p>
+      <p>
+        I'm on <a href="https://twitter.com/0ffcat">Twitter</a> 
+        (<a href="https://twitter.com/f00cat">alt</a>), 
+        <a href="https://github.com/0ffcat">GitHub</a>,
+        <a href="https://anilist.co/user/0ffcat">AniList</a>,,,
+      </p>
+      <p>
+        If you want to contact me by email, it's <a href="mailto:c@0ff.io">c@0ff.io</a>, and my key can be found <a href="key.txt">here</a>, using my <a href="https://keybase.io/cyancat">keybase</a>, or below as you can see.
+      </p>
+      <code style="white-space:pre-line;font-size:9px;">
+          -----BEGIN PGP PUBLIC KEY BLOCK-----
+
+      mQENBGFbJ4YBCADNxHHAMRTPlV+ZP7flyhJzxO7V+IS3PpMCwOiqxVg76hJx5Ge3
+      YWYkb+FU/bxuSRVDDmgNeAa1/iAPmrifNAgfFytYg7QZSTHSxCCP47g+h9s1k60a
+      3+fK/fWiD8vPAS9K6YqQ003r/7N4ACABudarK14Bz+yRchSlesIJ79q11iYV3yMi
+      wsq/Q9CIFMwJ32L+8aT+xNAA6hfg4QGMwdXexWAKrpcf5j8XfHbG24eQX0in7CEt
+      3mCixGOeemE5FMFD4sqR3fPLMm6R+0+heugBFoZJjh1T8xpbsodj5mn+gxCfO8no
+      2jldkdnn6Xm7kr1WDLlU75o1d0oP9ZDisToPABEBAAG0EmN5YW5jYXQgPGNAMGZm
+      LmlvPokBTgQTAQgAOBYhBBfruNMF+HeNSL/ynUKhkOQECa+TBQJhWyeGAhsDBQsJ
+      CAcCBhUKCQgLAgQWAgMBAh4BAheAAAoJEEKhkOQECa+Tu2sIALeFhP7ylYV+a21n
+      k2fjDBhxk4642HW/LxHYh2ysom6Pdm4QQVWPqarZrzxQ/DkfgG/CqKS1ebQdBWEI
+      29PDM7h9vnMyHe5wnYRQuXJKevaGBGuoWXyzL85UpeXwvg/Wz1XMSbv8Dbodm/Ek
+      VvhSWbko/8hDv3kNhjikAszMDgUUcmI+yq9FlhU2QoxYvjBLGNdUXDmuoNlXeJIc
+      qkIPbQcm+dd78qojyI3XM/h/QVlctOi+ZJ1BAQevFXMAtnS6BdrGTQJej9+Aj28E
+      4AgpD214mfjuM2f586x8scZ7zx5MC+qBbk4gs3oY+iKHdcRgRp/2SAmsZjmUoOCt
+      URd+JhG5AQ0EYVsnhgEIAMYGEvWI53wQLB1kwNArfWiqe6IrFPkaHbTsgwdvM1to
+      hXIbu1X+geI0reb/gCJLcs8zhFIFmJYDJmx8LhDQgGIMCd+0IrglHjnXnuv0o0Il
+      HssFrNHrI1qi3V9/9UMtBF9Q5s7gzJxo6TT9m+fJPkn4ppFTKNcxVTVTTpiFkkPy
+      Z+rZfFK8N09ccE6i69IlqqvKrkG6qhglPgduNST8TKe2K+ZQCmmWEQxu9q55C8/I
+      qyZelrKl4aSjtZFIvr72kbksoax6z0kQPNHTAMAr3t+W5vVq9y+9Xf0+8uA/Ve80
+      FRk3GRy1Xm4oNujG8WRN/e2u9wISLNbLPm2id++y2SUAEQEAAYkBNgQYAQgAIBYh
+      BBfruNMF+HeNSL/ynUKhkOQECa+TBQJhWyeGAhsMAAoJEEKhkOQECa+TQh4H/R2h
+      6CNnqA2BKBHTa1DIR/vA0uW+eT3kNt7Yi21RtLBNXKfjGbKUz3UFII00dCGsQF9d
+      RvumE7Cfq54MeUUGYeZF7ovahXkEQGrpuHZ++TFQs+4vmh5Yg7vDTZxnz2JVlypP
+      NfthMOpExQS56agcVd7OcyI9NqW97SnHW3wcLTzdMDeKC4Xn3am104xTeGvR07zY
+      9YDL3krRB/bHNZ462rATrFCbxhra0ixKqGsucBNmSUBrGX3Y4ND34JI2Y+jvmoP8
+      Gg+/Xxvy51uy/16Sah6bZ5xAzMiChMmwecEqgOW4LanyOHAIkZiD1qAXi/Qpcdix
+      LAHEVw89iTXAy9RJDfI=
+      =a8nc
+      -----END PGP PUBLIC KEY BLOCK-----
+      </code>
+	</body>
 </html>
